# IO-meter

./: CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cmake.yml
docs/: CMakeLists.txt  Doxyfile.in  user_guide.md
src/: CMakeLists.txt  err_macros.h  nc_tests.h  tst_compress_par.c
tests/: CMakeLists.txt
